# MyFaceDetection

./: README.md  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/br/com/gservices/facedetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DetectionBasedTracker.cpp  DetectionBasedTracker.h
app/src/main/java/br/com/gservices/facedetection/: DetectionBasedTracker.kt  MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/br/com/gservices/facedetection/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
